<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.siri.qr_code.Sign_Up"
    android:background="@drawable/unnamed">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"

        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true">



        <TextView

            android:id="@+id/textView1"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:text="@string/RegistrationForm"

            android:textAppearance="?android:attr/textAppearanceLarge" />



        <TextView

            android:id="@+id/fuserid"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Name"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/Name"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPersonName|textCapWords|textCapSentences" >

            <requestFocus />

        </EditText>





        <TextView

            android:id="@+id/Pass_txt"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/EnrollmentNumber"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/Enno"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="Enter 11 or 12 digit Enrollment number"

            android:inputType="textPersonName" />


        <TextView

            android:id="@+id/textView4"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Branch"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/br"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textCapWords|textCapSentences" />

        <TextView

            android:id="@+id/textView5"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="Year of Study"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/yr"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="(1/2/3/4)"

            android:inputType="number" />


        <TextView

            android:id="@+id/textView6"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/CPI"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/cpi"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="On a scale of 10"

            android:inputType="numberDecimal" />

        <TextView

            android:id="@+id/textView7"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/SSC"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/ssc"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="Percentage"

            android:inputType="numberDecimal" />


        <TextView

            android:id="@+id/textView8"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/HSC"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/hsc"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="Percentage"

            android:inputType="numberDecimal" />

        <TextView

            android:id="@+id/textView9"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Email"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>

        <EditText

            android:id="@+id/eml"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="@string/lbl_email_hint"

            android:inputType="textEmailAddress" />



        <TextView

            android:id="@+id/textView10"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/Password"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/pwd"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:hint="Strong Password: Length more than 6 "
            android:inputType="textPassword" />

        <TextView

            android:id="@+id/textView11"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/ConfirmPassword"

            android:hint="Type password again"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fffffefc"
            android:textStyle="bold"/>



        <EditText

            android:id="@+id/cpwd"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:ems="10"

            android:inputType="textPassword" />

        <Button

            android:id="@+id/Sup"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:onClick="startsignup"

            android:text="@string/SignUp"

            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>

</RelativeLayout>


