<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/unnamed"
    tools:context="com.example.siri.qr_code.Profile.Data">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"

            android:layout_alignParentTop="true"

            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true">



            <TextView

                android:id="@+id/textView1"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"

                android:text="User Profile"

                android:textAppearance="?android:attr/textAppearanceLarge" />


           <!-- <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get"
                android:id="@+id/getbutt"
                android:layout_gravity="right" />
-->
            <TextView

                android:id="@+id/name"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Name"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tname"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" >

            </EditText>





            <TextView

                android:id="@+id/enno"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/EnrollmentNumber"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tenno"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" />


            <TextView

                android:id="@+id/branch"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Branch"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tbranch"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" />

            <TextView

                android:id="@+id/year"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Year"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tyear"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textPersonName" />


            <TextView

                android:id="@+id/textView6"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/CPI"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tcpi"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="numberDecimal" />

            <TextView

                android:id="@+id/textView7"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/SSC"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/tssc"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="numberDecimal" />


            <TextView

                android:id="@+id/textView8"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/HSC"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>



            <EditText

                android:id="@+id/thsc"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="numberDecimal" />

            <TextView

                android:id="@+id/textView9"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:text="@string/Email"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#fffffefc"
                android:textStyle="bold"/>

            <EditText

                android:id="@+id/temail"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:ems="10"

                android:inputType="textEmailAddress" />


                 </LinearLayout>

    </ScrollView>
</RelativeLayout>
