<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/unnamed"
    tools:context="com.example.siri.qr_code.Profile.HomePage">

    <TextView
        android:text="@string/welcome_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/date_tv" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp">

    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <TableRow>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:contentDescription="Library"
                android:src="@drawable/studentprofile"
                android:layout_span="4" />
         </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Profile"
                android:id="@+id/myprobutt"
                android:layout_column="0"
                android:layout_span="3" />
        </TableRow>

        <TableRow>

        </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="Library"
            android:src="@drawable/library"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="40dp"
            android:contentDescription="Student Faculty Interaction"
            android:src="@drawable/studentfacinter"/>
    </TableRow>
    <TableRow android:background="@drawable/border">
        <Button
            android:id="@+id/lib"
            android:layout_width="100dp"
            android:layout_height="100px"
            android:onClick="startsignup"
            android:text="@string/lib"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />
        <Button
            android:id="@+id/inter"
            android:layout_width="100dp"
            android:layout_height="100px"
            android:layout_gravity="center_horizontal"
            android:text="@string/inter"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
             />
    </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Space
                android:layout_width="20px"
                android:layout_height="30px"
                android:layout_column="3" />
        </TableRow>



        <TableRow
        android:layout_width="fill_parent"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="Events"
            android:src="@drawable/eventreg"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="Course Material"
            android:src="@drawable/course"/>
    </TableRow>
    <TableRow
        android:background="@drawable/border">
        <Button
            android:id="@+id/eve"
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:layout_gravity="center_horizontal"
            android:text="@string/eve"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:text="Course Material"
            android:id="@+id/mmbutt"
            android:layout_above="@+id/tnpbutt"
            android:layout_marginLeft="25dp"
             />

    </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Space
                android:layout_width="20px"
                android:layout_height="30px"
                android:layout_column="3" />
        </TableRow>

        <TableRow
        android:layout_width="fill_parent"
        android:background="@drawable/border">
        <ImageView
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="Placements"
            android:src="@drawable/tnp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="History"
            android:src="@drawable/history"/>
    </TableRow>
    <TableRow
        android:background="@drawable/border">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:text="TNP"
            android:id="@+id/tnpbutt"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History"
            android:id="@+id/Hist_butt"
            android:layout_marginLeft="25dp"/>
    </TableRow>
    </TableLayout>
</ScrollView>
</TableLayout>
